Prevent horizontal page overflow

--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -83,6 +83,7 @@ body {
     color: var(--text-black);
     line-height: 1.5;
 
+    overflow-x: hidden;
     overflow-y: scroll;
 }
 
